# escape-from-lily

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  Readme.md  vcpkg.json
.github/workflows/: CI - win.yml  ci-windows.yml  hosted-ninja-vcpkg_submod.yml
assets/: default.json
assets/images/Entity/Player/Kawaii_Ghost_Sprite/: License.txt  website.html
assets/images/backgrounds/: LICENSE
assets/json/: config.json  default.json  fonts.json  player.json
docs/: Build.md  CONTRIBUTING.md  CONTRIBUTORS.md  Class.docs.md  Coding.md  ExplainUsage.md  FileStructure.md  TODO.md  implement.md
docs/implements/: opencode_20260514_how-to-implement-input.md  opencode_20260514_param_factory_player_refactor.md  opencode_20260514_sdl3-events.md  opencode_20260519_factory-method.md  opencode_20260519_log-system.md  opencode_20260523_sdl3-ttf-font.md
innosetup/: 1.00.0.iss
innosetup/informations/: info-after-v1.00.0.txt  info-after-v1.01.0.txt  info-before-v1.00.0.txt  info-before-v1.01.0.txt
src/: Background.cpp  Background.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
src/core/: Def.h  Game.cpp  Game.h  Object.h  ObjectScreen.cpp  ObjectScreen.h  ObjectWorld.cpp  ObjectWorld.h  Scene.h  TexturedEntity.cpp  TexturedEntity.h
src/core/Config/: Config.cpp  Config.h  ConfigCategory.h  ConfigManager.cpp  ConfigManager.h
src/core/Config/Structs/: BaseJson.h  DefaultStruct.h  FontStruct.h  PlayerStruct.h
src/core/Entities/: Background.cpp  Background.h  Camera.cpp  Camera.h  Player.cpp  Player.h  TexturedEntity.cpp  TexturedEntity.h  UserInterface.cpp  UserInterface.h
src/core/Entities/Base/: HealthyPointEntity.cpp  HealthyPointEntity.h  MovableEntity.cpp  MovableEntity.h  TexturedEntity.cpp  TexturedEntity.h
src/core/Entities/Enemies/: EnemyRose.cpp  EnemyRose.h
src/core/Factory/: EntityFactory.cpp  EntityFactory.h  EntityTypes.cpp  EntityTypes.h  Param.h
src/core/Font/: EFL_FontDef.h  FontManager.cpp  FontManager.h  TextBase.cpp  TextBase.h  TextStatic.cpp  TextStatic.h  TextStypes.cpp  TextStypes.h
src/core/Font/Base/: TextBase.h  TextStatic.cpp  TextStatic.h  TextStypes.h
src/core/Input/: Action.h  Input.cpp  Input.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
src/core/Logger/: Log.cpp  Log.h  LogCategory.h
src/core/Object/: Object.cpp  Object.h  ObjectScreen.h  ObjectWorld.h
translations/zn-ch/: Readme.md
